<resources>
    <string name="app_name">药品盒子</string>
    <string name="unknown_error_toast">服务器异常，请稍后重试</string>
    <string name="connect_failed_toast">服务器开小差了，请稍后再试!</string>
    <string name="connect_timeout">请求超时，请检查您的网络</string>
    <string name="third_upload_fail">第三方上传失败，请稍后重试</string>
    <string name="download_fail">下载失败，请稍后重试</string>
    <string name="user_logout">您的账号已在别处登录，请重新登录</string>
    <string name="system_busy">服务器开小差了~</string>
    <string name="msg_send_fail">发送消息失败，系统网络异常</string>
    <string name="msg_delete_fail">消息删除失败，系统网络异常</string>

    <string name="rong_response_405">(rong)您在对方黑名单中</string>
    <string name="rong_response_22406">(rong)您不在当前群组中，暂无法发送消息</string>
    <string name="rong_response_30001">(rong)Token错误，通讯中断</string>
    <string name="rong_response_30002">(rong)网络绑定不可用</string>
    <string name="rong_response_30003">(rong)信令通讯中，ACK超时</string>
    <string name="rong_response_30004">(rong)网络通讯中，HTTP发送超时</string>
    <string name="rong_response_30005">(rong)网络通讯中，HTTP请求超时</string>
    <string name="rong_response_30007">(rong)网络请求错误</string>
    <string name="rong_response_30008">(rong)您当前网络可能被劫持，发送消息失败</string>
    <string name="rong_response_30011">(rong)网络绑定中断</string>
    <string name="rong_response_30014">(rong)信息发送失败</string>
    <string name="rong_response_31000">(rong)网络绑定时，ACK超时</string>
    <string name="rong_response_31001">(rong)协议参数错误</string>
    <string name="rong_response_31002">(rong)参数错误，请重新配置KEY</string>
    <string name="rong_response_31003">(rong)服务不可用</string>
    <string name="rong_response_31004">(rong)用户名或密码错误</string>
    <string name="rong_response_31007">(rong)您的当前包名与注册包名不一致</string>
    <string name="rong_response_31008">(rong)APP被屏蔽/删除/不存在</string>
    <string name="rong_response_31009">(rong)当前用户被屏蔽</string>
    <string name="rong_response_31010">(rong)您已在其他设备登录</string>
    <string name="rong_response_33001">(rong)请首先调用init在进行绑定</string>
    <string name="rong_response_33002">(rong)数据库错误</string>
    <string name="rong_response_33006">(rong)绑定中，请不要再次调用connect</string>
    <string name="connect">绑定</string>
    <string name="cancel">取消</string>
    <string name="voice_remind">语音提醒</string>
    <string name="screen_remind">屏幕提醒</string>
    <string name="volume_setting">音量设置</string>
    <string name="other_remind">其他提醒</string>
    <string name="input_remind_content">输入提醒内容</string>
    <string name="remind_time">提醒时间</string>
    <string name="delete">删除</string>
    <string name="register">注册</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="verification_code">验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="confirm">确定</string>
    <string name="login">登录</string>
    <string name="language_cn">中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="save">保存</string>
    <string name="number_and_letters">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOASDFGHJKLZXCVBNM</string>
    <string name="forget_password2">忘记密码？</string>
    <string name="language_select">语言选择</string>
    <string name="search">搜索</string>
    <string name="host_connection">主机绑定</string>
    <string name="log_out">退出登录</string>
    <string name="enter_the_home_screen">进入主屏</string>
    <string name="connected">已绑定</string>
    <string name="please_connect_to_the_host_first">请先绑定主机</string>
    <string name="host_serial_number1">主机序列号1</string>
    <string name="host_serial_number2">主机序列号2</string>
    <string name="host_serial_number">主机序列号</string>
    <string name="host_details">主机详情</string>
    <string name="host_number">主机编号：</string>
    <string name="drug_storehouse_temperature">药仓温度：</string>
    <string name="drug_warehouse_humidity">药仓湿度：</string>
    <string name="current_mode">当前模式：</string>
    <string name="log_information">日志信息：</string>
    <string name="PCS_set">药盒设置</string>
    <string name="press_the_return_key_again_to_exit">再次按返回键退出</string>
    <string name="userinfo">用户信息</string>
    <string name="medicine_management">药盒管理</string>
    <string name="remind_set">提醒设置</string>
    <string name="temporary_get_medicine">临时取药</string>
    <string name="set_out">外出设置</string>
    <string name="kit_overview">药盒总览</string>
    <string name="drug_knowledge">药物知识</string>
    <string name="push_advice">推送建议</string>
    <string name="report_information">报表信息</string>
    <string name="about_us">关于我们</string>
    <string name="return_link">绑定主机</string>
    <string name="host1">主机1</string>
    <string name="host2">主机2</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="sex_selection">选择性别</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="date_of_birth">出生日期</string>
    <string name="emergency_contact_number1">应急联系人电话1</string>
    <string name="emergency_contact_number2">应急联系人电话2</string>
    <string name="note_userinfo">注意：*为必填项</string>
    <string name="is_not_set">未设置</string>
    <string name="empty">清空</string>
    <string name="save_successfully">保存成功</string>
    <string name="current_drug_storehouse">当前药仓</string>
    <string name="drug_name">药品名称</string>
    <string name="drug_expiry_date">药品到期日</string>
    <string name="dosage_for_this_addition">本次加药量</string>
    <string name="surplus_medicine">剩余药品量</string>
    <string name="daily_dose">每次服用剂量</string>
    <string name="everyday">每天</string>
    <string name="not_everyday_take">非日服</string>
    <string name="taking_medicine_time">服药时间</string>
    <string name="add">添加</string>
    <string name="drug_storehouse_number">药仓编号</string>
    <string name="note_box_manager">注意：加药时切勿混药、混批次，药盒清空后再加药！</string>
    <string name="please_input_content">请输入内容</string>
    <string name="max_volume_warning">音量已经调至最大</string>
    <string name="min_volume_warning">音量已经调至最小</string>
    <string name="get_medicine">取药</string>
    <string name="remaining_quantity">余量</string>
    <string name="useful_life">有效期</string>
    <string name="take_medicine_number">取药数量</string>
    <string name="input_number">输入取药数量</string>
    <string name="dosage_immediately">立即配药</string>
    <string name="current_time">当前时间</string>
    <string name="return_date">返回日期</string>
    <string name="return_time">返回时间</string>
    <string name="dispensing_copies">配药份数</string>
    <string name="notice">注意：</string>
    <string name="set_out_note">外出时段将不再配药。如7日内返回可选择立即配出期间需要的药品按份配好以便携带！</string>
    <string name="dosage_note">正在配取 4月5日 16：00 的药品</string>
    <string name="exception_message">异常信息</string>
    <string name="please_input_correct_phone_number">请输入正确的手机号</string>
    <string name="please_input_verification">请输入验证码</string>
    <string name="exit">退出</string>
    <string name="is_confirm_to_exit_the_account">确认要退出账号么？</string>
    <string name="dosage">剂量</string>
    <string name="medicine_box_remaining_quantity">药盒余量</string>
    <string name="drug_quantity_overview">药量总览</string>
    <string name="medicine">药品</string>
    <string name="start_time">开始时间</string>
    <string name="used">已使用</string>
    <string name="undosed_ratio">未服药率</string>
    <string name="didnt_take_medicine_on_time">未按时服药</string>
    <string name="take_medicine_time">服药时段</string>
    <string name="check_the_time">查看时段</string>
    <string name="warehouse_one">一号仓</string>
    <string name="warehouse_two">二号仓</string>
    <string name="warehouse_three">三号仓</string>
    <string name="warehouse_four">四号仓</string>
    <string name="warehouse_five">五号仓</string>
    <string name="warehouse_six">六号仓</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="monday_dot">周一，</string>
    <string name="tuesday_dot">周二，</string>
    <string name="wednesday_dot">周三，</string>
    <string name="thursday_dot">周四，</string>
    <string name="friday_dot">周五，</string>
    <string name="saturday_dot">周六，</string>
    <string name="sunday_dot">周日，</string>
    <string name="dot">，</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="version">版本</string>
    <string name="current_version">当前版本：</string>
    <string name="date_of_development">开发日期：</string>
    <string name="hint_of_box_search">输入药盒唯一序列号绑定</string>
    <string name="login_means_you_have_agreed">登录代表您已同意</string>
    <string name="Register_means_you_have_agreed">注册代表您已同意</string>
    <string name="user_login_protocol">《用户登录协议》</string>
    <string name="day">日</string>
    <string name="check_remind">仅可查看今日之前的时段</string>
    <string name="user_info_remind">请输入/选择必填项</string>
    <string name="age">年龄</string>
    <string name="features_under_development">功能尚未开放</string>
    <string name="scan_code">扫码</string>
    <string name="scan_code_tip">将二维码、条码放入框内自行扫描即可</string>
    <string name="go_out_remind">配药完成</string>
    <string name="go_out_tip1">配药完成、请点击保存</string>
    <string name="go_out_tips2">用药提醒将变更为外出模式</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_countries_and_regions">选择国家或地区</string>
    <string name="login_abnormal_tip">您的账号登录异常，请重新登录</string>
    <string name="code_sent_successfully">验证码发送成功</string>
    <string name="login_host_connect_tip">您尚未绑定主机，请先绑定主机</string>
</resources>
