<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CheckTimeActivity">

    <TextView
        android:id="@+id/tv_calendar_title"
        android:textSize="16sp"
        android:textColor="@color/greenText"
        android:gravity="center"
        android:text=""
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:text="@string/sunday"
            android:textSize="15sp"
            android:textColor="@color/hintColor"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/monday"
            android:textSize="15sp"
            android:textColor="@color/normalText"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/tuesday"
            android:textSize="15sp"
            android:textColor="@color/normalText"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/wednesday"
            android:textSize="15sp"
            android:textColor="@color/normalText"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/thursday"
            android:textSize="15sp"
            android:textColor="@color/normalText"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/friday"
            android:textSize="15sp"
            android:textColor="@color/normalText"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/saturday"
            android:textSize="15sp"
            android:textColor="@color/hintColor"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.tckkj.medicinebox.view.NiceRecyclerView
        android:id="@+id/nrv_calendar"
        app:listDirection="HORIZONTAL"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:gridNum="7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>