<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:textSize="24sp"
        android:textColor="@color/normalText"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/icon_mine"
            android:layout_width="15dp"
            android:layout_height="17dp" />

        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/account"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <include layout="@layout/phone_input_and_choose"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/icon_phone"
            android:layout_width="12dp"
            android:layout_height="18dp" />

        <TextView
            android:layout_marginLeft="12dp"
            android:text="@string/verification_code"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:background="@color/editBg"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <com.tckkj.medicinebox.view.ClearEditText
            android:id="@+id/cet_input_verification"
            android:paddingRight="5dp"
            android:textSize="16sp"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_get_verification"
            android:textSize="16sp"
            android:textColor="@color/greenText"
            android:padding="10dp"
            android:text="@string/get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:src="@mipmap/icon_lock"
            android:layout_width="16dp"
            android:layout_height="18dp" />

        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/password"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.tckkj.medicinebox.view.ClearEditText
        android:id="@+id/cet_password"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:digits="@string/number_and_letters"
        android:paddingRight="5dp"
        android:textSize="16sp"
        android:paddingLeft="10dp"
        android:background="@color/editBg"
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_marginTop="13dp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:layout_gravity="right"
        android:visibility="gone"
        android:text="@string/forget_password2"
        android:paddingRight="2dp"
        android:paddingLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_green_bg_22"
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/Register_means_you_have_agreed"
            android:textSize="13sp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_login_protocol"
            android:textSize="13sp"
            android:textColor="@color/greenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>