<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="31dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/editBg"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <TextView
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:textColor="@color/normalText"
                android:text="@string/take_medicine_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/tv_check_time"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:textColor="@color/redBg"
                android:text="@string/check_the_time"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <TextView
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/taking_medicine_time"
                android:textSize="11sp"
                android:textColor="@color/normalText"
                android:layout_width="70dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/warehouse_one"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/warehouse_two"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/warehouse_three"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/warehouse_four"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/warehouse_five"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/warehouse_six"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lineColor"/>

        <LinearLayout
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <TextView
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text=""
                android:textSize="13sp"
                android:textColor="@color/normalText"
                android:layout_width="70dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="阿司匹林"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="阿司匹林"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="阿司匹林"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="阿司匹林"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="阿司匹林"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="阿司匹林"
                android:textSize="10sp"
                android:textColor="@color/normalText"
                android:layout_height="match_parent" />

        </LinearLayout>

        <com.tckkj.medicinebox.view.NiceRecyclerView
            android:id="@+id/nrv_take_medicine_time"
            app:listDirection="VERTICAL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v7.widget.CardView>