<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/pick_round"
        android:orientation="vertical">

        <TextView
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/is_confirm_to_exit_the_account"
            android:textColor="@color/gray"
            android:textSize="10sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/greenText" />

        <TextView
            android:id="@+id/me_back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/canclePic"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/pick_round"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_marginBottom="10dp"
        android:textColor="@color/greenText"
        android:textSize="20sp" />

</LinearLayout>